--- a/Pages/Topics.razor
+++ b/Pages/Topics.razor
@@ -19,7 +19,7 @@
 
 <PageTitle>Topics</PageTitle>
 
-<div class="topics-header">
+<div class="page-header">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>Categories</h1>
         <div class="form-check form-switch">
