--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="oi oi-list" aria-hidden="true"></span> Topics
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="search">
+                <span class="oi oi-magnifying-glass" aria-hidden="true"></span> Search
+            </NavLink>
+        </div>
     </nav>
 </div>
 
