--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-magnifying-glass" aria-hidden="true"></span> Search
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="publish">
+                <span class="oi oi-document" aria-hidden="true"></span> Publish
+            </NavLink>
+        </div>
     </nav>
 </div>
 
