--- a/Pages/Publish.razor
+++ b/Pages/Publish.razor
@@ -101,7 +101,7 @@
                     <div class="card-body text-center">
                         <span class="oi oi-document display-4 text-muted mb-3"></span>
                         <h5 class="card-title">No Documents Published</h5>
-                        <p class="card-text text-muted">Create your first document using the form on the left.</p>
+                        <p class="card-text text-muted">A document is a collection of all active posts. It cannot be altered and can be downloaded as PDF. New posts that have not been published yet will be empasized in the PDF to get a quick grasp of what's new.</p>
                     </div>
                 </div>
             }
