--- a/Components/DocumentCard.razor
+++ b/Components/DocumentCard.razor
@@ -80,5 +80,7 @@
         public DateTime Date { get; set; }
         public List<string> Attendees { get; set; } = new();
         public List<Post> Posts { get; set; } = new();
+        public List<Topic> Topics { get; set; } = new();
+        public List<Category> Categories { get; set; } = new();
     }
 }
