--- a/Components/DocumentCard.razor
+++ b/Components/DocumentCard.razor
@@ -7,6 +7,11 @@
         <div class="document-header">
             <h5 class="card-title">@Document.Title</h5>
             <div class="document-actions">
+                <ActionButton Icon="oi-data-transfer-download" 
+                            Color="primary" 
+                            IsOutlined="true" 
+                            Title="Download PDF" 
+                            OnClick="OnDownload" />
                 <ActionButton Icon="oi-trash" 
                             Color="danger" 
                             IsOutlined="true" 
@@ -66,6 +71,7 @@
     [Parameter, EditorRequired] public Document Document { get; set; } = default!;
     [Parameter] public string JsonRepresentation { get; set; } = default!;
     [Parameter] public EventCallback OnDelete { get; set; }
+    [Parameter] public EventCallback OnDownload { get; set; }
 
     private bool showJson = false;
 
