--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -36,5 +36,6 @@
     <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
     <script src="_content/Blazored.TextEditor/Blazored-BlazorQuill.js"></script>
     <script src="js/quillInterop.js"></script>
+    <script src="js/site.js"></script>
 </body>
 </html>
