--- a/Pages/Publish.razor
+++ b/Pages/Publish.razor
@@ -1,4 +1,5 @@
 @page "/publish"
+@using Contilog.Components
 @using Contilog.Models
 @using Contilog.Repositories
 @using Contilog.Handlers.Documents
@@ -14,7 +15,7 @@
 @inject IGetAllPostsHandler GetAllPostsHandler
 @inject IGetAllTopicsHandler GetAllTopicsHandler
 @inject IGetAllCategoriesHandler GetAllCategoriesHandler
-@inject IGenerateTxtDocumentHandler GenerateTxtDocumentHandler
+@inject IGeneratePdfDocumentHandler GeneratePdfDocumentHandler
 @inject IJSRuntime JSRuntime
 
 <PageTitle>Publish</PageTitle>
@@ -243,7 +244,7 @@
 
     private async Task DownloadDocument(Document document)
     {
-        var response = await GenerateTxtDocumentHandler.Handle(new GenerateTxtDocumentRequest(document));
+        var response = await GeneratePdfDocumentHandler.Handle(new GeneratePdfDocumentRequest(document));
         if (response.Success)
         {
             await JSRuntime.InvokeVoidAsync("downloadFile", response.FileName, response.Base64Data, response.MimeType);
